<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NavKon</string>
    <string name="action_settings">Settings</string>
    <string name="chooseOffice">Choose location of an office:</string>
	<string name="dalej">Next</string>
	<string name="blank"></string>
	<string name="chooseMode">Choose mode:</string>
	<string name="routeInfo">Info</string>
	<string name="usa_info">ATTENTION: To let application navigate to Mobica office in San Jose, u must be in the territory of:<i>Belize, Guatemala, Honduras, Canada, Costa Rica, Nicaragua, Panama, El Salvador, United States</i>. Otherwise application will not work properly.</string>
	<string name="stopNav">Help</string>
	<string name="findPlaces">Find</string>
	<string name="route_reset">Reset</string>
	<string name="start_address">Start Address:</string>
	<string name="end_address">End Address:</string>
	<string name="odleglosc">Distance:</string>
	<string name="czas">Duration:</string>
	<string name="init">Initialization. Please wait...</string>
	<string name="loading">Loading...</string>
	<string name="reached">You have reached your target!</string>
	<string name="info_powrot">Back</string>
	<string name="help_text">Use the RESET button if u notice problem with route.\n\nPress FIND to show nearest shops/gas-stations and others.\n\nPress INFO for route info.\n\nButtons + and - control map zoom.\n</string>
	<string-array name="offices_array">
        <item>BYDGOSZCZ (POLAND)</item>
        <item>LODZ (POLAND)</item>
        <item>SAN JOSE (USA)</item>
        <item>SZCZECIN (POLAND)</item>
        <item>WARSAW (POLAND)</item>
        <item>WILMSLOW (UK)</item>
    </string-array>
    <string-array name="modes_array">
        <item>DRIVING</item>
        <item>CYCLING</item>
        <item>WALKING</item>
    </string-array>
    <string-array name="places_modes">
        <item>Gas stations</item>
        <item>Lodging</item>
        <item>Grocery or supermarket</item>
        <item>Bars and restaurants</item>
        <item>ATM</item>
    </string-array>
</resources>
